--- a/print.html
+++ b/print.html
@@ -12,7 +12,11 @@ permalink: /print
 
 {% include experiences.html %}
 
+{% include certifications.html %}
+
 {% include projects.html %}
+
+{% include oss-contributions.html %}
 
 {% include publications.html %}
 
